--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -22,6 +22,10 @@
     height: 70%;
     width: 100%;
     background-color: #2A2A47;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 25px 0;
 }
 
 .hot-icon{
@@ -35,11 +39,50 @@
 
 .table-card {
     width: 30%;
-    height: 65%;
+    height: 80%;
     max-width: 32%;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     cursor: pointer;
+}
+
+.table-data {
+    color: white;
+    font-size: 1rem;
+}
+
+.table-data > * {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin: 0 2em;
+}
+.reference {
+    margin: 0 1.6em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.reference > * {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    align-content: center;
+    min-width: 8em;
+}
+
+.reference > * > *{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+    min-width: 50px;
+    margin: 0 5px;
 }
