--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -25,7 +25,8 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    padding: 25px 0;
+    padding: 15px 0;
+    justify-content: space-between;
 }
 
 .hot-icon{
@@ -55,7 +56,7 @@
 
 .table-data > * {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
     margin: 0 2em;
 }
