--- a/src/general.css
+++ b/src/general.css
@@ -1,8 +1,14 @@
-.base{
+.App{
     height: 100%;
+}
+.base{
+    height: 100vh;
     background-color: #23243A;
     font: 500 20px / 32px Roboto, "Montserrat", sans-serif;
     letter-spacing: normal;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container {
@@ -10,7 +16,7 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 85%;
-    height: 100vh;
+    height: 92vh;
     align-items: stretch;
     margin: 0 8%;
 }
@@ -81,7 +87,7 @@
 
 .game_tab_wrapper {
     width: 100%;
-    height: 85%;
+    height: 95%;
     grid-gap: 5%;
     gap: 5%;
     display: flex;
@@ -132,8 +138,13 @@ button {
     bottom: 0;
     right: 0;
     left: 0;
-    height: 4.5%;
-    padding-top: 1%;
+    margin-top: 1%;
+    background-color: #2A2A47;
+    box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .highlight-cercle{
