- Implementing popup version 1.

--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -87,3 +87,7 @@
     min-width: 50px;
     margin: 0 5px;
 }
+.titleStyle {
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: black;
+}
