--- a/src/styles/Popup.css
+++ b/src/styles/Popup.css
@@ -11,22 +11,21 @@
     position: relative;
     margin: 0 auto;
     top: 25%;
-    width: 90%;
+    width: 100%;
     height: 51%;
     left: 24%;
     z-index: 21;
-    flex-wrap: wrap;
-    padding: 20px 50px;
+    flex-wrap: nowrap;
     align-content: center;
     align-items: center;
     justify-content: center;
 }
 
 .popup-generic{
+    font: 500 20px/32px Roboto,Montserrat,sans-serif;
+    left: 0%;
+    margin: unset;
     position: absolute;
-    margin:unset;
-    left: 5%;
-    font: 500 20px / 32px Roboto, "Montserrat", sans-serif;
 }
 
 .dark_overlay {
