--- a/src/general.css
+++ b/src/general.css
@@ -102,7 +102,7 @@
     gap: 2%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     overflow: overlay;
 }
 
