Resetting the project at the root.

--- a/src/styles/SubComponents/GameCard.css
+++ b/src/styles/SubComponents/GameCard.css
@@ -30,7 +30,7 @@
 }
 
 .hot-icon{
-    background-image: url(../assets/pictures/gameIlus/fire.png);
+    background-image: url(../../assets/pictures/gameIlus/fire.png);
     position: relative;
     height: 80%;
     width: 30%;
