--- a/src/general.css
+++ b/src/general.css
@@ -11,6 +11,17 @@
     justify-content: space-between;
 }
 
+.logo-style{
+    -webkit-text-stroke: 0.1px rgba(255, 255, 255, 0.15);
+    margin: 5% 2% 0px 0px;
+    font-size: 3em;
+    font-family: Lato;
+    font-weight: 700;
+    font-style: italic;
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: #ffffff26;
+}
+
 .container {
     display: flex;
     flex-direction: column;
